--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,10 +210,13 @@ a:focus,
   padding: 0;
   background: url(../img/intro-bg.jpeg) center center no-repeat;
   background-color: #e5e5e5;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
-  background-size: cover;
   -o-background-size: cover;
+  background-size: cover;
 }
 .intro .overlay {
   background: rgba(0, 0, 0, 0.2);
@@ -221,7 +224,7 @@ a:focus,
 .intro h1 {
   font-family: "Raleway", sans-serif;
   color: #fff;
-  font-size: 82px;
+  font-size: calc(100% + 4.4vw + 4.4vh);
   font-weight: 700;
   text-transform: uppercase;
   margin-top: 0;
@@ -233,7 +236,7 @@ a:focus,
 }
 .intro p {
   color: #fff;
-  font-size: 22px;
+  font-size: calc(100% + .5vw + .5vh);
   font-weight: 300;
   line-height: 30px;
   margin: 0 auto;
@@ -246,6 +249,7 @@ header .intro-text {
 }
 /* Features Section */
 #features {
+  padding: 100px 0;
   background: #f6f6f6;
 }
 #features i.fa {
